--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vitamin UI</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="vt-window"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
