--- a/packages/core/www/index.html
+++ b/packages/core/www/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="importmap">
+    {
+      "imports": {
+        "lit": "https://cdn.jsdelivr.net/npm/lit@3.0.0-pre.0/+esm",
+        "lit/": "https://cdn.jsdelivr.net/npm/lit@3.0.0-pre.0/",
+        "lit-html": "https://cdn.jsdelivr.net/npm/lit-html@3.0.0-pre.0/+esm",
+        "lit-html/": "https://cdn.jsdelivr.net/npm/lit-html@3.0.0-pre.0/",
+        "@lit/reactive-element": "https://cdn.jsdelivr.net/npm/@lit/reactive-element@2.0.0-pre.0/+esm",
+        "@lit/reactive-element/": "https://cdn.jsdelivr.net/npm/@lit/reactive-element@2.0.0-pre.0/"
+      }
+    }
+    </script>
     <script>
       new EventSource('/esbuild').addEventListener('change', e => {
         const { added, removed, updated } = JSON.parse(e.data);
