--- a/packages/theme/www/index.html
+++ b/packages/theme/www/index.html
@@ -31,13 +31,14 @@
     <link href="/assets/index.css" rel="stylesheet">
   </head>
   <body style="height: 100vh;">
-    <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center space-x-4">
+    <div class="p-6 max-w-sm mx-auto bg-white is-rounded-md shadow-lg flex items-center space-x-4 debug">
       <div class="shrink-0">
         <img class="h-12 w-12" src="/img/logo.svg" alt="ChitChat Logo">
       </div>
       <div>
         <div class="text-xl font-medium text-black">ChitChat</div>
-        <p class="text-slate-500">You have a new message!</p>
+        <p class="text-slate-500 has-text-info-dark">You have a new message!</p>
+        <button class="ui-btn ui-btn-secondary">Resolved</button>
       </div>
     </div>
   </body>
