--- a/packages/theme/www/index.html
+++ b/packages/theme/www/index.html
@@ -34,7 +34,7 @@
       });
     </script>
 
-    <link href="/assets/index.css" rel="stylesheet">
+    <link href="/assets/style.css" rel="stylesheet">
     <script type="module">
       import { IconsMap } from 'icons';
       document.getElementById('shrink-0').innerHTML = IconsMap.get('columns').render('class="h-64 w-64 text-black"');
@@ -55,8 +55,6 @@
 </svg>
 <svg class="h-64 w-64 text-black"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <circle cx="10" cy="10" r="7" />  <line x1="7" y1="10" x2="13" y2="10" />  <line x1="21" y1="21" x2="15" y2="15" /></svg>
         <button class="ui-btn ui-btn-secondary">
-          <i class="bi"></i>
-          
           Resolved
         </button>
       </div>
