chore: research local proxy

--- a/packages/ui/www/index.html
+++ b/packages/ui/www/index.html
@@ -7,6 +7,7 @@
     <script type="importmap">
     {
       "imports": {
+        "@websublime/vitamin-core/web-component.js": "../../core/dist/utilities/web-component.js",
         "lit": "https://cdn.jsdelivr.net/npm/lit@3.0.0-pre.0/+esm",
         "lit/": "https://cdn.jsdelivr.net/npm/lit@3.0.0-pre.0/",
         "lit-html": "https://cdn.jsdelivr.net/npm/lit-html@3.0.0-pre.0/+esm",
