--- a/packages/ui/www/index.html
+++ b/packages/ui/www/index.html
@@ -57,43 +57,48 @@
     <style>.ui-switch {  }</style>
 
     <section class="ui-play-section">
-      <table>
-        <tr>
-          <th>Tag Name</th>
-          <th>Component</th>
-          <th>Properties</th>
-          <th>CSS Properties</th>
-        </tr>
-        <tr>
-          <td>
-            <p>Name: ui-icon</p>
-          </td>
-          <td>
-            <i style="height: 64px; width: 64px; display: block"><ui-icon name="github"></ui-icon></i>
-          </td>
-          <td>TODO</td>
-          <td>TODO</td>
-        </tr>
-        <tr>
-          <td>
-            <p>Name: ui-switch</p>
-          </td>
-          <td>
-            <ui-switch>
-              <ui-icon slot="prepend" name="moon"></ui-icon>
-              <ui-icon slot="append" name="sun"></ui-icon>
-            </ui-switch>
-            <ui-switch>
-              <span slot="left">OFF</span>
-              <span slot="right">ON</span>
-              <ui-icon style="color: red" slot="prepend" name="moon"></ui-icon>
-              <ui-icon style="color: green" slot="append" name="sun"></ui-icon>
-            </ui-switch>
-          </td>
-          <td>TODO</td>
-          <td>TODO</td>
-        </tr>
-      </table>
+      <div class="ui-play-container">
+        <nav class="ui-play-nav">Navigation</nav>
+        <div class="ui-play-content">
+          <table class="w-full">
+            <tr>
+              <th>Tag Name</th>
+              <th>Component</th>
+              <th>Properties</th>
+              <th>CSS Properties</th>
+            </tr>
+            <tr>
+              <td>
+                <p>Name: ui-icon</p>
+              </td>
+              <td>
+                <i style="height: 64px; width: 64px; display: block"><ui-icon name="github"></ui-icon></i>
+              </td>
+              <td>TODO</td>
+              <td>TODO</td>
+            </tr>
+            <tr>
+              <td>
+                <p>Name: ui-switch</p>
+              </td>
+              <td>
+                <ui-switch>
+                  <ui-icon slot="prepend" name="moon"></ui-icon>
+                  <ui-icon slot="append" name="sun"></ui-icon>
+                </ui-switch>
+                <ui-switch>
+                  <span slot="left">OFF</span>
+                  <span slot="right">ON</span>
+                  <ui-icon style="color: red" slot="prepend" name="moon"></ui-icon>
+                  <ui-icon style="color: green" slot="append" name="sun"></ui-icon>
+                </ui-switch>
+              </td>
+              <td>TODO</td>
+              <td>TODO</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </section>
 
     <script type="module" src="/assets/main.js"></script>
