--- a/packages/ui/www/index.html
+++ b/packages/ui/www/index.html
@@ -67,6 +67,7 @@
               <th>Properties</th>
               <th>CSS Properties</th>
             </tr>
+
             <tr>
               <td>
                 <p>Name: ui-icon</p>
@@ -77,6 +78,7 @@
               <td>TODO</td>
               <td>TODO</td>
             </tr>
+
             <tr>
               <td>
                 <p>Name: ui-switch</p>
@@ -92,6 +94,20 @@
                   <ui-icon style="color: red" slot="prepend" name="moon"></ui-icon>
                   <ui-icon style="color: green" slot="append" name="sun"></ui-icon>
                 </ui-switch>
+              </td>
+              <td>TODO</td>
+              <td>TODO</td>
+            </tr>
+
+            <tr>
+              <td>
+                <p>Name: ui-checkbox</p>
+              </td>
+              <td>
+                <ui-checkbox></ui-checkbox>
+                <ui-checkbox>
+                  <span slot="label">Check</span>
+                </ui-checkbox>
               </td>
               <td>TODO</td>
               <td>TODO</td>
