--- a/packages/ui/www/index.html
+++ b/packages/ui/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en" theme="orizon">
+<html dir="ltr" lang="en" theme="orizon" class="dark">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,6 +55,12 @@
   <body style="height: 100vh;">
     <!-- CUSTOMIZE ELEMENTS CSS VARS -->
     <style>.ui-switch {  }</style>
+    <nav class="ui-navigator">
+      <ui-switch id="theme-change">
+        <ui-icon slot="prepend" name="moon"></ui-icon>
+        <ui-icon slot="append" name="sun"></ui-icon>
+      </ui-switch>
+    </nav>
 
     <section class="ui-play-section">
       <div class="ui-play-container">
@@ -119,6 +125,10 @@
               </td>
               <td>
                 <ui-range min="10" max="100"></ui-range>
+                <ui-range min="10" max="100">
+                  <span slot="min">10</span>
+                  <span slot="max">100</span>
+                </ui-range>
               </td>
               <td>TODO</td>
               <td>TODO</td>
