feat(theming): scale helpers background

--- a/packages/theme/www/index.html
+++ b/packages/theme/www/index.html
@@ -46,10 +46,6 @@
                 <span class="flex h-6 w-6 items-center justify-center rounded-full is-gray">G</span>
             </button>
 
-            <button data-theme="theme-red" class="ui-nav-button is-red-border">
-                <span class="flex h-6 w-6 items-center justify-center rounded-full is-red">R</span>
-            </button>
-
             <button data-theme="theme-mauve" class="ui-nav-button is-mauve-border">
                 <span class="flex h-6 w-6 items-center justify-center rounded-full is-mauve">M</span>
             </button>
@@ -64,6 +60,10 @@
 
             <button data-theme="theme-olive" class="ui-nav-button is-olive-border">
                 <span class="flex h-6 w-6 items-center justify-center rounded-full is-olive">O</span>
+            </button>
+
+            <button data-theme="theme-red" class="ui-nav-button is-red-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-red">R</span>
             </button>
 
             <button data-theme="theme-tomato" class="ui-nav-button is-tomato-border">
@@ -93,13 +93,132 @@
             <button data-theme="theme-indigo" class="ui-nav-button is-indigo-border">
                 <span class="flex h-6 w-6 items-center justify-center rounded-full is-indigo">I</span>
             </button>
+
+            <button data-theme="theme-blue" class="ui-nav-button is-blue-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-blue">B</span>
+            </button>
+
+            <button data-theme="theme-cyan" class="ui-nav-button is-cyan-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-cyan">C</span>
+            </button>
+
+            <button data-theme="theme-teal" class="ui-nav-button is-teal-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-teal">T</span>
+            </button>
+
+            <button data-theme="theme-green" class="ui-nav-button is-green-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-green">G</span>
+            </button>
+
+            <button data-theme="theme-grass" class="ui-nav-button is-grass-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-grass">G</span>
+            </button>
+
+            <button data-theme="theme-brown" class="ui-nav-button is-brown-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-brown">B</span>
+            </button>
+
+            <button data-theme="theme-bronze" class="ui-nav-button is-bronze-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-bronze">B</span>
+            </button>
+
+            <button data-theme="theme-gold" class="ui-nav-button is-gold-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-gold">G</span>
+            </button>
+
+            <button data-theme="theme-sky" class="ui-nav-button is-sky-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-sky">S</span>
+            </button>
+
+            <button data-theme="theme-mint" class="ui-nav-button is-mint-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-mint">M</span>
+            </button>
+
+            <button data-theme="theme-lime" class="ui-nav-button is-lime-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-lime">L</span>
+            </button>
+
+            <button data-theme="theme-yellow" class="ui-nav-button is-yellow-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-yellow">Y</span>
+            </button>
+
+            <button data-theme="theme-amber" class="ui-nav-button is-amber-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-amber">A</span>
+            </button>
+
+            <button data-theme="theme-orange" class="ui-nav-button is-orange-border">
+                <span class="flex h-6 w-6 items-center justify-center rounded-full is-orange">O</span>
+            </button>
         </div>
 
         <div class="ui-nav-theme">
             <button class="ui-theme-button border-2"></button>
         </div>
     </nav>
-    <section class="p-4"></section>
+
+    <section class="p-4">
+      <div class="ui-palette mb-4">
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-gray">Gray</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-mauve">Mauve</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-slate">Slate</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-sage">Sage</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-olive">Olive</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-red">Red</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-tomato">Tomato</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-crimson">Crimson</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-pink">Pink</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-plum">Plum</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-purple">Purple</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-violet">Violet</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-indigo">Indigo</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-blue">Blue</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-cyan">Cyan</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-teal">Teal</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-green">Green</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-grass">Grass</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-brown">Brown</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-bronze">Bronze</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-gold">Gold</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-sky">Sky</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-mint">Mint</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-lime">Lime</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-yellow">Yellow</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-amber">Amber</div>
+        <div class="flex py-4 px-6 items-center justify-center rounded-md is-orange">Orange</div>
+      </div>
+
+      <div class="ui-scale">
+        <div class="ui-scale-container">
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-subtle-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-ui-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-hover-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-active-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-subtle-element-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-ui-element-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-ui-hover-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-solid-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-hover-solid-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-low-contrast-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-gray-high-contrast-background"></div>
+        </div>
+
+        <div class="ui-scale-container">
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-subtle-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-ui-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-hover-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-active-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-subtle-element-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-ui-element-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-ui-hover-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-solid-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-hover-solid-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-low-contrast-background"></div>
+          <div class="flex h-8 w-8 p-2 items-center justify-center is-red-high-contrast-background"></div>
+        </div>
+      </div>
+    </section>
 
     <script type="module" src="/dist/main.js"></script>
 </body>
